bitfields/tests/compile_error_cases/bitfield_invalid_bitfield_into_endian_value.rs
use bitfields::bitfield;

#[bitfield(u32, into_endian = 123)]
pub struct Bitfield {
    #[bits(default = 0x12)]
    a: u32,
}

#[bitfield(u32, into_endian = invalid)]
pub struct Bitfield {
    #[bits(default = 0x12)]
    a: u32,
}

fn main() {}
